--- a/Bot Control v3.2
+++ b/Bot Control v3.2
@@ -60,12 +60,16 @@ local cmdfix = true
 local cmdfireworks = true
 local cmdfling = true
 local cmdunfling = true
+local cmdwalkfling = true
+local cmdunwalkfling = true
 local cmdexplode = true
 local cmdelevator = true
 local cmdunelevator = true
 local cmdgojo = true
 local cmdbridge = true
 local cmdunbridge = true
+local cmdtrampoline = true
+local cmduntrampoline = true
 local cmdnuke = true
 local cmdsit = true
 local cmdunsit = true
@@ -83,21 +87,7 @@ local cmdshotgun = true
 local cmdunshotgun = true
 local cmdgun = true
 local cmdungun = true
-local cmdwave = true
-local cmdunwave = true 
-local cmdportal = true
-local cmdunportal = true
-local cmdshield = true
-local cmdunshield = true
-local cmdswarm = true
-local cmdunswarm = true
-local cmddna = true
-local cmdundna = true
-local cmdgalaxy = true
-local cmdungalaxy = true
-local cmdmeteor = true
-local cmdtornado = true
-local cmduntornado = true
+local cmdsmite = true
 
 local towerbool = nil
 local followbool = nil
@@ -118,6 +108,7 @@ local boolspin = nil
 local adminbool = nil
 local stalkbool = nil
 local flingbool = nil
+local walkflingbool = nil
 local elevatorbool = nil
 local gojobool = nil
 local bridgebool = nil
@@ -127,13 +118,8 @@ local quakebool = false
 local swordbool = nil
 local shotgunbool = nil
 local gunbool = nil
-local wavebool = nil
-local portalbool = nil
-local shieldbool = nil
-local swarmbool = nil
-local dnabool = nil
-local galaxybool = nil
-local tornadobool = nil
+local trampolinebool = nil
+local smitebool = nil
 local Admins = {}
 
 --version of the script
@@ -163,6 +149,7 @@ if printcmd then
   print(";ws <number>                         | Change bots' walk speed")
   print(";channel <number>                    | Select which bot speaks in chat")
   print(";gravity <number>                    | Bots change gravity")
+  -- Positioning & Formation Commands
   print(";goto [plr]                          | Bots teleport to a player")
   print(";left [plr]                          | Bots form a line to the left")
   print(";right [plr]                         | Bots form a line to the right")
@@ -178,6 +165,7 @@ if printcmd then
   print(";unworm                              | Stop the train formation")
   print(";sit                                 | Bots sit")
   print(";unsit                               | Bots stop sitting")
+  -- Orbit & Motion Effects
   print(";orbit [plr] <radius> <speed>        | Bots orbit a player (V1 - Basic)")
   print(";orbit2 [plr] <radius> <speed>       | Bots orbit a player (V2 - Enhanced)")
   print(";orbit3 [plr] <radius> <speed>       | Bots orbit a player (V3)")
@@ -189,9 +177,11 @@ if printcmd then
   print(";unquake                             | Bots unquake")
   print(";spin <number>                       | Bots start spinning")
   print(";unspin                              | Bots stop spinning")
+  -- Admin Commands
   print(";admin [plr]                         | Grant admin permissions to a player")
   print(";unadmin [plr]                       | Remove admin permissions")
   print(";cmds                                | Display available commands in chat")
+  -- Special Effects & Attacks
   print(";fling [plr]                         | Bots teleport to a player and fling them")
   print(";unfling                             | Stop bots from flinging")
   print(";fireworks [plr]                     | Bots launch into the air and explode")
@@ -203,22 +193,8 @@ if printcmd then
   print(";gojo [plr]                          | Bots perform the Hollow Purple sequence")
   print(";sword [plr]                         | Bots sword towards a player")
   print(";unsword                             | Stop bots from swording")
-  print(";wave [plr]                          | Bots form a wave formation")
-  print(";unwave                              | Disable wave formation")
-  print(";portal [plr]                        | Bots create a spinning portal")
-  print(";unportal                            | Disable portal effect")
-  print(";shield [plr]                        | Bots create a protective shield")
-  print(";unshield                            | Disable shield formation")
-  print(";swarm [plr]                         | Bots swarm around a player")
-  print(";unswarm                             | Disable swarm attack")
-  print(";dna [plr]                           | Bots form a DNA helix")
-  print(";undna                               | Disable DNA formation")
-  print(";galaxy [plr]                        | Bots form a galaxy spiral")
-  print(";ungalaxy                            | Disable galaxy formation")
-  print(";meteor [plr]                        | Bots create a meteor shower")
-  print(";tornado [plr]                       | Bots form a tornado")
-  print(";untornado                           | Disable tornado formation")
-
+  print(";smite [plr]                         | Bots descend from above and explode on impact")
+  -- Utility & Fix Commands
   print(";fix                                 | Attempt to fix a bot if glitched")
   print("-------------------------------------------------------------------")
 end
@@ -361,13 +337,9 @@ ladderbool = false
 quakebool = false
 shotgunbool = false
 gunbool = false
-wavebool = false
-portalbool = false
-shieldbool = false
-swarmbool = false
-dnabool = false
-galaxybool = false
-tornadobool = false
+walkflingbool = nil
+trampolinebool = nil
+smitebool = nil
 end
 
 -- ;fix
@@ -393,13 +365,9 @@ ladderbool = false
 minebool = false
 shotgunbool = false
 gunbool = false
-wavebool = false
-portalbool = false
-shieldbool = false
-swarmbool = false
-dnabool = false
-galaxybool = false
-tornadobool = false
+walkflingbool = false
+trampolinebool = false
+smitebool = false
 game.Workspace.Gravity = 196.2
 player.Character:BreakJoints()
 end
@@ -835,10 +803,96 @@ local function unfling()
   end
 end
 
--- ;nuke
-local RunService = game:GetService("RunService")
-local Players = game:GetService("Players")
+-- ;walkfling
+local function walkfling(targetPlayer)
+  if player and player.Character then
+    local humanoid = player.Character:FindFirstChild("Humanoid")
+    local humanoidRootPart = player.Character:FindFirstChild("HumanoidRootPart")
+    
+    if humanoid and humanoidRootPart then
+      humanoid:ChangeState(Enum.HumanoidStateType.Physics)
+      -- Apply walkfling effects
+      local Spin = Instance.new("BodyAngularVelocity")
+      Spin.Name = "Spinning"
+      Spin.Parent = humanoidRootPart
+      Spin.MaxTorque = Vector3.new(math.huge, math.huge, math.huge)
+      Spin.AngularVelocity = Vector3.new(999999, 999999, 999999)
+      
+      local Velocity = Instance.new("BodyVelocity")
+      Velocity.Name = "Upward"
+      Velocity.Parent = humanoidRootPart
+      Velocity.MaxForce = Vector3.new(math.huge, math.huge, math.huge)
+      Velocity.Velocity = Vector3.new(999999, 999999, 999999)
 
+      walkflingbool = true
+
+      if targetPlayer then
+        -- Loop teleport and walk to target player
+        local teleportLoop = game:GetService("RunService").Heartbeat:Connect(function()
+          if not walkflingbool then
+            teleportLoop:Disconnect()
+            if Spin then
+              Spin:Destroy()
+            end
+            if Velocity then
+              Velocity:Destroy()
+            end
+            return
+          end
+          
+          if targetPlayer.Character then
+            local targetHumanoidRootPart = targetPlayer.Character:FindFirstChild("HumanoidRootPart")
+            if targetHumanoidRootPart then
+              -- Teleport near target
+              humanoidRootPart.CFrame = targetHumanoidRootPart.CFrame + targetHumanoidRootPart.CFrame.LookVector * 0
+              
+            end
+          end
+        end)
+        
+        -- Clean up loop when target dies
+        task.spawn(function()
+          while targetPlayer and targetPlayer.Character and targetPlayer.Character:FindFirstChild("Humanoid") and targetPlayer.Character.Humanoid.Health > 0 do
+            task.wait()
+          end
+          teleportLoop:Disconnect()
+          player.Character:BreakJoints()
+          humanoid:ChangeState(Enum.HumanoidStateType.GettingUp)
+
+          if humanoid then
+            if Spin then
+              Spin:Destroy()  
+            end
+            if Velocity then
+              Velocity:Destroy()
+            end
+          end
+        end)
+      end
+    end
+  end
+end
+
+-- ;unwalkfling
+local function unwalkfling()
+  walkflingbool = false
+  if player and player.Character then
+    local humanoidRootPart = player.Character:FindFirstChild("HumanoidRootPart")
+    if humanoidRootPart then
+      local spin = humanoidRootPart:FindFirstChild("Spinning")
+      local velocity = humanoidRootPart:FindFirstChild("Upward")
+      
+      if spin then
+        spin:Destroy()
+      end
+      if velocity then
+        velocity:Destroy()
+      end
+    end
+  end
+end
+
+-- ;nuke
 local function nuke(targetPlayer)
     if not targetPlayer or not targetPlayer.Character then
         return
@@ -1422,6 +1476,100 @@ local function sword(targetPlayer, initialDistance)
   return swordConnection
 end
 
+-- ;smite
+local function smite(targetPlayer, initialDistance)
+  -- Stop any existing smite connection
+  if smiteConnection then
+      smiteConnection:Disconnect()
+      smiteConnection = nil
+  end
+
+  if not targetPlayer or not targetPlayer.Character then
+      return nil
+  end
+
+  local targetHumanoidRootPart = targetPlayer.Character:FindFirstChild("HumanoidRootPart")
+  local targetHumanoid = targetPlayer.Character:FindFirstChild("Humanoid")
+  
+  if not targetHumanoidRootPart or not targetHumanoid then
+      return nil
+  end
+
+  -- Set smite boolean to true
+  smitebool = true
+  
+  -- Get the bot's index to determine position
+  local displayName = player.DisplayName
+  local botIndex = table.find(bots, displayName)
+
+  if not botIndex then 
+      return nil
+  end
+
+  -- Dynamic distance calculation
+  local subsequentSpacing = 5 -- Spacing between subsequent bots
+
+  -- Calculate the bot's specific distance
+  local forwardDistance
+  if botIndex == 1 then
+      forwardDistance = initialDistance  -- Use the initial distance specified
+  else
+      -- Subsequent bots are placed incrementally further
+      forwardDistance = initialDistance + ((botIndex - 1) * subsequentSpacing)
+  end
+
+  -- Continuous positioning mechanism
+  smiteConnection = RunService.Heartbeat:Connect(function()
+      -- Check if smite should continue
+      if not smitebool or not player or not player.Character then
+          if smiteConnection then
+              smiteConnection:Disconnect()
+              smiteConnection = nil
+          end
+          return
+      end
+
+      local localHumanoidRootPart = player.Character:FindFirstChild("HumanoidRootPart")
+      local localHumanoid = player.Character:FindFirstChild("Humanoid")
+
+      if localHumanoidRootPart and targetHumanoidRootPart and localHumanoid then
+          -- Get target's current position and rotation
+          local targetCFrame = targetHumanoidRootPart.CFrame
+
+          -- Calculate position 100 studs above the target
+          local desiredPosition = targetCFrame.Position + Vector3.new(0, 1000, 0)
+
+          -- Create a CFrame that looks at the target while being upside down
+          local rotatedCFrame = CFrame.lookAt(desiredPosition, targetCFrame.Position) * 
+                                 CFrame.Angles(math.rad(90), 0, 0)  -- Rotate 180 degrees to be upside down
+
+          -- Set bot's CFrame to be 100 studs above the target
+          localHumanoidRootPart.CFrame = rotatedCFrame
+
+          -- Add velocity towards the target
+          local velocityDirection = (targetHumanoidRootPart.Position - localHumanoidRootPart.Position).Unit
+          local velocityMagnitude = 500  -- Adjust this value to control speed
+          
+          localHumanoidRootPart.Velocity = velocityDirection * velocityMagnitude
+      else
+          -- Disconnect if target or bot is missing
+          if smiteConnection then
+              smiteConnection:Disconnect()
+              smiteConnection = nil
+          end
+      end
+  end)
+
+  task.delay(0.5, function()
+      if targetPlayer and targetPlayer.Character and targetHumanoid then
+          -- Kill the player
+          player.Character:BreakJoints()
+      end
+  end)
+
+  return smiteConnection
+end
+
 -- ;shotgun
 local function shotgun(targetPlayer, initialDistance)
   -- Stop any existing shotgun connection
@@ -1699,134 +1847,6 @@ local function gun(targetPlayer, initialDistance)
   return gunConnection
 end
 
--- ;wave
-local function wave(targetPlayer)
-  local amplitude = 5
-  local frequency = 0.5
-  
-  local t = tick() + (index * frequency / nbbot)
-  local yOffset = amplitude * math.sin(t * frequency)
-  local position = target.Character.HumanoidRootPart.Position + Vector3.new(index * 2 - nbbot, yOffset, 0)
-  player.Character.HumanoidRootPart.CFrame = CFrame.new(position)
-end
-
--- ;portal
-local function portal(targetPlayer)
-  local radius = 6
-  local angle = ((index-1) / nbbot) * 2 * math.pi
-  local rotSpeed = 0.5
-  local currentAngle = angle + tick() * rotSpeed
-  
-  local xOffset = radius * math.cos(currentAngle)
-  local zOffset = radius * math.sin(currentAngle)
-  
-  local position = target.Character.HumanoidRootPart.Position + Vector3.new(xOffset, 0, zOffset)
-  player.Character.HumanoidRootPart.CFrame = CFrame.new(position, target.Character.HumanoidRootPart.Position)
-end
-
--- ;shield
-local function shield(targetPlayer)
-  local angle = ((index-1) / nbbot) * 2 * math.pi
-  local radius = 5
-  
-  local xOffset = radius * math.cos(angle)
-  local zOffset = radius * math.sin(angle)
-  
-  local targetPos = target.Character.HumanoidRootPart.Position
-  local position = targetPos + Vector3.new(xOffset, 0, zOffset)
-  
-  player.Character.HumanoidRootPart.CFrame = CFrame.new(position, targetPos)
-end
-
--- ;swarm
-local function swarmFormation(target)
-  local randomOffset = Vector3.new(
-      math.random(-3, 3), 
-      math.random(-1, 3), 
-      math.random(-3, 3)
-  )
-  
-  local targetPos = target.Character.HumanoidRootPart.Position
-  local position = targetPos + randomOffset
-  
-  player.Character.HumanoidRootPart.CFrame = CFrame.new(position, targetPos)
-end
-
--- ;dna
-local function dna(targetPlayer)
-  local radius = 4
-  local height = 10
-  local speed = 0.5
-  
-  local t = tick() * speed
-  local angle = ((index-1) / nbbot) * math.pi * 2 + t
-  
-  -- Calculate strand position (alternating between two strands)
-  local strandOffset = (index % 2 == 0) and 0 or math.pi
-  local xOffset = radius * math.cos(angle + strandOffset)
-  local zOffset = radius * math.sin(angle + strandOffset)
-  
-  -- Calculate vertical position for helix
-  local yPosition = ((angle / (math.pi * 2)) % 1) * height
-  
-  local targetPos = target.Character.HumanoidRootPart.Position
-  local position = targetPos + Vector3.new(xOffset, yPosition - height/2, zOffset)
-  
-  player.Character.HumanoidRootPart.CFrame = CFrame.new(position, targetPos)
-end
-
--- ;galaxy
-local function galaxy(targetPlayer)
-  local baseRadius = 10
-  local height = 3
-  local rotationSpeed = 0.3
-  
-  -- Calculate spiral parameters
-  local botProgress = index / nbbot
-  local spiralRadius = baseRadius * (0.3 + 0.7 * botProgress)
-  local t = tick() * rotationSpeed
-  
-  -- Add a rotation that's faster toward the center
-  local angle = t * (1 + (1 - botProgress) * 2) + botProgress * math.pi * 4
-  
-  -- Create spiral effect
-  local xOffset = spiralRadius * math.cos(angle)
-  local zOffset = spiralRadius * math.sin(angle)
-  
-  -- Add some height variation
-  local yOffset = math.sin(angle * 0.5) * height * botProgress
-  
-  local targetPos = target.Character.HumanoidRootPart.Position
-  local position = targetPos + Vector3.new(xOffset, yOffset, zOffset)
-  
-  player.Character.HumanoidRootPart.CFrame = CFrame.new(position, targetPos)
-end
-
--- ;tornado
-local function tornado(targetPlayer)
-  local baseRadius = 5
-  local maxHeight = 20
-  
-  -- Calculate position in the tornado
-  local heightFactor = index / nbbot
-  local currentHeight = heightFactor * maxHeight
-  
-  -- Make radius smaller as we go higher
-  local currentRadius = baseRadius * (1 - heightFactor * 0.8)
-  
-  -- Rotation speed increases with height
-  local rotationSpeed = 2 + heightFactor * 3
-  local angle = tick() * rotationSpeed
-  
-  local xOffset = currentRadius * math.cos(angle)
-  local zOffset = currentRadius * math.sin(angle)
-  
-  local targetPos = target.Character.HumanoidRootPart.Position
-  local position = targetPos + Vector3.new(xOffset, currentHeight, zOffset)
-  
-  player.Character.HumanoidRootPart.CFrame = CFrame.new(position, position + Vector3.new(math.cos(angle + math.pi/2), 0, math.sin(angle + math.pi/2)))
-end
-
 -- ;bridge
 local function bridge(targetPlayer)
   -- Stop any existing bridge connection
@@ -1910,6 +1930,97 @@ local function unbridge()
       bridgeConnection:Disconnect()
       bridgeConnection = nil
   end
+end
+
+-- ;trampoline
+local function trampoline(targetPlayer, initialDistance)
+  -- Stop any existing trampoline connection
+  if trampolineConnection then
+      trampolineConnection:Disconnect()
+      trampolineConnection = nil
+  end
+
+  if not targetPlayer or not targetPlayer.Character then
+      return nil
+  end
+
+  local targetHumanoidRootPart = targetPlayer.Character:FindFirstChild("HumanoidRootPart")
+  if not targetHumanoidRootPart then
+      return nil
+  end
+
+  -- Set trampoline boolean to true
+  trampolinebool = true
+  
+  -- Get the bot's index to determine position
+  local displayName = player.DisplayName
+  local botIndex = table.find(bots, displayName)
+
+  if not botIndex then 
+      return nil
+  end
+
+  -- Dynamic distance calculation
+  local horizontalSpacing = 0 -- Horizontal spacing between bots
+  local verticalOffset = -3.6 -- Vertical offset to place bots underneath feet
+
+  -- Calculate the bot's specific horizontal position
+  local horizontalOffset
+  if botIndex == 1 then
+      horizontalOffset = 0  -- First bot at center
+  else
+      -- Alternate bots to the left and right
+      horizontalOffset = (botIndex % 2 == 0) and 
+                         (math.ceil(botIndex/2) * horizontalSpacing) or 
+                         (-math.floor(botIndex/2) * horizontalSpacing)
+  end
+
+  -- Continuous positioning mechanism
+  trampolineConnection = RunService.Heartbeat:Connect(function()
+      -- Check if trampoline should continue
+      if not trampolinebool or not player or not player.Character then
+          if trampolineConnection then
+              trampolineConnection:Disconnect()
+              trampolineConnection = nil
+          end
+          return
+      end
+
+      local localHumanoidRootPart = player.Character:FindFirstChild("HumanoidRootPart")
+      local localHumanoid = player.Character:FindFirstChild("Humanoid")
+
+      if localHumanoidRootPart and targetHumanoidRootPart and localHumanoid then
+          -- Get target's current position and rotation
+          local targetCFrame = targetHumanoidRootPart.CFrame
+
+          -- Calculate bot's position underneath the player
+          local desiredPosition = targetCFrame.Position + 
+                                  targetCFrame.RightVector * horizontalOffset + 
+                                  Vector3.new(0, verticalOffset, 0)
+
+          -- Create a CFrame that matches the target's rotation
+          -- Extract the target's rotation, but keep the vertical offset
+          local rotatedCFrame = CFrame.new(desiredPosition) * 
+                                (targetCFrame - targetCFrame.Position) * 
+                                CFrame.Angles(math.rad(90), 0, 0)
+
+          -- Set bot's CFrame 
+          localHumanoidRootPart.CFrame = rotatedCFrame
+
+          -- Add vertical velocity for a bouncing effect
+          local velocityDirection = Vector3.new(0, 100, 0)  -- Strong upward velocity
+          
+          localHumanoidRootPart.Velocity = velocityDirection
+      else
+          -- Disconnect if target or bot is missing
+          if trampolineConnection then
+              trampolineConnection:Disconnect()
+              trampolineConnection = nil
+          end
+      end
+  end)
+
+  return trampolineConnection
 end
 
 -- ;tower
@@ -2453,6 +2564,14 @@ local function connectChatListener(playerpower)
             cmdgun = false
             cmdungun = false
             gunbool = false
+            walkflingbool = false
+            cmdwalkfling = false
+            cmdunwalkfling = false
+            cmdtrampoline = false
+            cmduntrampoline = false
+            trampolinebool = false
+            cmdsmite = false
+            smitebool = false
             Admins = {}
             adminNotConnected = {}
             chatMessage("Ended Script.")
@@ -2574,7 +2693,7 @@ local function connectChatListener(playerpower)
         end
         wait(2)
     
-      elseif command == "unsit" and table.find(bots, displayName) then
+    elseif command == "unsit" and table.find(bots, displayName) then
         unsit()
         if index == channel then
             chatMessage("Bots are now standing")
@@ -2646,6 +2765,29 @@ local function connectChatListener(playerpower)
           end
           wait(2)
           
+        elseif command:sub(1, 9) == "walkfling" and table.find(bots, displayName) and cmdwalkfling then
+          disablebool()
+          local playerName = command:sub(11)
+          local targetPlayer = findPlayerByName(playerName)
+          if targetPlayer then
+            if index == channel then
+              chatMessage("Bots are now walkflinging towards " .. targetPlayer.Name)
+            end
+            walkfling(targetPlayer)
+            wait(2)
+          else
+            if index == channel then
+              chatMessage("Player not found for walkflinging.")
+            end
+          end
+        
+        elseif command == "unwalkfling" and table.find(bots, displayName) and cmdunwalkfling then
+          walkflingbool = false
+          if index == channel then
+            chatMessage("Stopped walkflinging")
+          end
+          wait(2)
+
         elseif command:sub(1, 5) == "sword" and table.find(bots, displayName) and cmdsword then
           disablebool()
           local args = command:sub(7):split(" ")  -- Split the command into arguments
@@ -2697,6 +2839,26 @@ local function connectChatListener(playerpower)
           end
           wait(2)
 
+        elseif command:sub(1, 5) == "smite" and table.find(bots, displayName) and cmdsmite then
+          disablebool()
+          local args = command:sub(7):split(" ")  -- Split the command into arguments
+          local targetName = args[1]
+          local initialDistance = tonumber(args[2]) or 20  -- Default distance is 20 if not specified
+        
+          local targetPlayer = findPlayerByName(targetName)
+        
+          if targetPlayer then
+              if index == channel then
+                  chatMessage("Smiting " .. targetPlayer.Name .. " at a distance of " .. initialDistance)
+              end
+              smite(targetPlayer, initialDistance)  -- Pass the distance to the smite function
+              wait(2)
+          else
+              if index == channel then
+                  chatMessage("Player not found for smiting.")
+              end
+          end
+        
         elseif command:sub(1, 4) == "gun " and table.find(bots, displayName) and cmdgun then
           disablebool()
           local args = command:sub(5):split(" ")  -- Split the command into arguments
@@ -3111,10 +3273,41 @@ local function connectChatListener(playerpower)
 
     elseif command:sub(1, 5) == "worm " and table.find(bots, displayName) and cmdworm then
       disablebool()
-        local playerName = command:sub(6)
+        local playerName = command:sub(6) -- Obtenir le nom du joueur à suivre
         local targetPlayer = findPlayerByName(playerName)
         wormbool = false
         worm(targetPlayer)
+        wait(2)
+
+      elseif command:sub(1, 10) == "trampoline" and table.find(bots, displayName) and cmdtrampoline then
+        disablebool()
+        local args = command:sub(12):split(" ")  -- Split the command into arguments
+        local targetName = args[1]
+        local initialDistance = tonumber(args[2]) or 0  -- Default distance is 20 if not specified
+      
+        local targetPlayer = findPlayerByName(targetName)
+      
+        if targetPlayer then
+            if index == channel then
+                chatMessage("Trampolining to " .. targetPlayer.Name .. " at a distance of " .. initialDistance)
+            end
+            trampoline(targetPlayer, initialDistance)  -- Pass the distance to the trampoline function
+            wait(2)
+        else
+            if index == channel then
+                chatMessage("Player not found for trampolining.")
+            end
+        end
+      
+      elseif command == "untrampoline" and table.find(bots, displayName) and cmduntrampoline then
+        trampolinebool = false
+        if trampolineConnection then
+            trampolineConnection:Disconnect()
+            trampolineConnection = nil
+        end
+        if index == channel then
+            chatMessage("Stopped trampolining")
+        end
         wait(2)
 
     elseif command:sub(1, 7) == "unstalk" and table.find(bots, displayName) and cmdunstalk then
@@ -3141,156 +3334,6 @@ local function connectChatListener(playerpower)
             chatMessage("Player not found: " .. playerName)
           end
         end
- 
-      elseif command:sub(1, 5) == "wave " and cmdwave then
-        local targetName = command:sub(6)
-        local target = findPlayerByName(playerName)
-        wave(targetPlayer)
-        if target then
-            wavebool = true
-            chatMessage("Bots are now in wave formation around " .. targetName)
-        else
-            chatMessage("Player not found")
-        end
-        wait(2)
-      elseif command == "unwave" and cmdunwave then
-        wavebool = false
-        chatMessage("Wave formation disabled")
-        wait(2)
-
-
-      elseif command:sub(1, 7) == "portal " and cmdportal then
-        local targetName = command:sub(8)
-        local target = findPlayerByName(playerName)
-        if target then
-            portalbool = true
-            chatMessage("Bots are creating a portal around " .. targetName)
-        else
-            chatMessage("Player not found")
-        end
-        wait(2)
-      elseif command == "unportal" and cmdunportal then
-        portalbool = false
-        chatMessage("Portal formation disabled")
-        wait(2)
-
-      elseif command:sub(1, 7) == "shield " and cmdshield then
-        local targetName = command:sub(8)
-        local target = findPlayerByName(playerName)
-        if target then
-            shieldbool = true
-            chatMessage("Bots are forming a shield around " .. targetName)
-        else
-            chatMessage("Player not found")
-        end
-        wait(2)
-
-      elseif command == "unshield" and cmdunshield then
-        shieldbool = false
-        chatMessage("Shield formation disabled")
-        wait(2)
-      
-      elseif command:sub(1, 6) == "swarm " and cmdswarm then
-        local targetName = command:sub(7)
-        local target = findPlayerByName(playerName)
-        if target then
-            swarmbool = true
-            chatMessage("Bots are swarming " .. targetName)
-        else
-            chatMessage("Player not found")
-        end
-        wait(2)
-      elseif command == "unswarm" and cmdunswarm then
-        swarmbool = false
-        chatMessage("Swarm attack disabled")
-        wait(2)
-      
-      elseif command:sub(1, 4) == "dna " and cmddna then
-        local targetName = command:sub(5)
-        local target = findPlayerByName(playerName)
-        if target then
-            dnabool = true
-            chatMessage("Bots are forming a DNA helix around " .. targetName)
-        else
-            chatMessage("Player not found")
-        end
-        wait(2)
-      elseif command == "undna" and cmdundna then
-        dnabool = false
-        chatMessage("DNA formation disabled")
-        wait(2)
-
-      elseif command:sub(1, 7) == "galaxy " and cmdgalaxy then
-        local targetName = command:sub(8)
-        local target = findPlayerByName(playerName)
-        if target then
-            galaxybool = true
-            chatMessage("Bots are forming a galaxy around " .. targetName)
-        else
-            chatMessage("Player not found")
-        end
-        wait(2)
-      elseif command == "ungalaxy" and cmdungalaxy then
-        galaxybool = false
-        chatMessage("Galaxy formation disabled")
-        wait(2)
-
-      elseif command:sub(1, 7) == "meteor " and cmdmeteor then
-        local targetName = command:sub(8)
-        local target = findPlayerByName(playerName)
-        if target then
-            -- Each bot becomes a meteor
-            if index then
-                spawn(function()
-                    -- Get random starting positions
-                    local angle = math.random(0, 360) * (math.pi/180)
-                    local distance = 20 * math.sqrt(math.random())
-                    local xOffset = math.cos(angle) * distance
-                    local zOffset = math.sin(angle) * distance
-                    
-                    -- Start high in the air
-                    local startPos = target.Character.HumanoidRootPart.Position + Vector3.new(xOffset, 100, zOffset)
-                    local endPos = target.Character.HumanoidRootPart.Position + Vector3.new(xOffset, 0, zOffset)
-                    
-                    -- Teleport to starting position
-                    game.Players.LocalPlayer.Character.HumanoidRootPart.CFrame = CFrame.new(startPos)
-                    wait(index * 0.2) -- Stagger the meteors
-                    
-                    -- Fall down
-                    local fallTime = 2
-                    local startTime = tick()
-                    local elapsed = 0
-                    
-                    while elapsed < fallTime do
-                        elapsed = tick() - startTime
-                        local progress = elapsed / fallTime
-                        local currentPos = startPos:Lerp(endPos, progress)
-                        
-                        game.Players.LocalPlayer.Character.HumanoidRootPart.CFrame = CFrame.new(currentPos)
-                        wait(0.01)
-                    end
-                end)
-            end
-            chatMessage("Meteor shower launched at " .. targetName)
-        else
-            chatMessage("Player not found")
-        end
-        wait(2)
-
-      elseif command:sub(1, 8) == "tornado " and cmdtornado then
-        local targetName = command:sub(9)
-        local target = findPlayerByName(playerName)
-        if target then
-            tornadobool = true
-            chatMessage("Bots are forming a tornado around " .. targetName)
-        else
-            chatMessage("Player not found")
-        end
-        wait(2)
-      elseif command == "untornado" and cmduntornado then
-        tornadobool = false
-        chatMessage("Tornado disabled")
-        wait(2)
 
     elseif command:sub(1, 7) == "follow " and table.find(bots, displayName) and cmdfollow then
       disablebool()
